...

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/dpnf_delete_phone_number_format_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Delete"
                style="@style/Widget.Button.Simple"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/dpnf_edit_phone_number_format_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Edit"
                style="@style/Widget.Button.Simple"/>

        </LinearLayout>
...
